--- a/src/index.scss
+++ b/src/index.scss
@@ -28,16 +28,23 @@
 
 body {
   background-color: var(--black);
+  color: white;
+}
+
+a {
+  color: currentColor;
+  text-decoration: none;
 }
 
 ::-webkit-scrollbar {
   display: none;
 }
 
-.skeleton {
+.shimmer {
   position: relative;
   overflow: hidden;
   background-color: #0a2955;
+  
   &::after {
       position: absolute;
       top: 0;
