--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -1,37 +1,42 @@
 @import "../../mixins.scss";
 
 .header {
-    position: fixed;
-    transform: translateY(0);
-    width: 100%;
-    height: 60px;
-    z-index: 1;
-    display: flex;
-    align-items: center;
-    transition: all ease 0.5s;
-    z-index: 2;
+    & {
 
-    &.top {
-        background: rgba(0, 0, 0, 0.25);
-        backdrop-filter: blur(3.5px);
-        -webkit-backdrop-filter: blur(3.5px);
-    }
-
-    &.show {
-        background-color: var(--black3);
-    }
-
-    &.hide {
-        transform: translateY(-60px);
-    }
-
-    .contentWrapper {
+        position: fixed;
+        transform: translateY(0);
+        width: 100%;
+        height: 60px;
+        z-index: 1;
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        transition: all ease 0.5s;
+        z-index: 2;
+        
+        &.top {
+            background: rgba(0, 0, 0, 0.25);
+            backdrop-filter: blur(3.5px);
+            -webkit-backdrop-filter: blur(3.5px);
+        }
+        
+        &.show {
+            background-color: var(--black3);
+        }
+        
+        &.hide {
+            transform: translateY(-60px);
+        }
+        
+        .contentWrapper {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
     }
 
     &__logo {
+        font-size: 1.4rem;
+        font-weight: 500;
         cursor: pointer;
 
         img {
