--- a/src/components/Carousel/style.scss
+++ b/src/components/Carousel/style.scss
@@ -16,44 +16,48 @@
         margin-bottom: 1.25rem;
     }
 
-    &__arrow {
-        font-size: 30px;
-        color: black;
+    &__nav {
+        background: black;
+        width: 2.75rem;
+        height: 2.75rem;
+        border-radius: 50%;
         position: absolute;
         top: 44%;
         transform: translateY(-50%);
-        cursor: pointer;
-        opacity: 0.5;
         z-index: 1;
+        cursor: pointer;
         display: none;
-
+    
         @include breakpoint(md) {
-            display: block;
-        }
-
-        &:hover {
-            opacity: 0.8;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
     }
 
-    &__left-nav {
+    &__nav-right {
+        right: 30px;
+    }
+    
+    &__nav-left {
         left: 30px;
     }
 
-    &__right-nav {
-        right: 30px;
+    &__arrow {
+        font-size: 1.25rem;
+        color: white;
     }
 
     &__items {
         display: flex;
         gap: 10px;
         overflow-y: hidden;
-        margin-right: -20px;
-        margin-left: -20px;
-        padding: 0 20px;
+        margin-right: -1.25rem;
+        margin-left: -1.25rem;
+        padding: 0 1.25rem;
 
         @include breakpoint(md) {
-            gap: 20px;
+            gap: 1.25rem;
             overflow: hidden;
             margin: 0;
             padding: 0;
