--- a/src/pages/Home/Hero/style.scss
+++ b/src/pages/Home/Hero/style.scss
@@ -108,7 +108,7 @@
         button {
             width: 6.25rem;
             height: 3.125rem;
-            background: var(--gradient);
+            background: var(--color-primary);
             color: white;
             outline: 0;
             border: 0;
