--- a/src/components/SwitchTabs/style.scss
+++ b/src/components/SwitchTabs/style.scss
@@ -15,7 +15,7 @@
         height: 30px;
         width: 100px;
         border-radius: 15px;
-        background-image: var(--gradient);
+        background-color: var(--color-primary);
         position: absolute;
         left: 0;
         transition: left cubic-bezier(0.88, -0.35, 0.565, 1.35) 0.4s;
