--- a/src/index.scss
+++ b/src/index.scss
@@ -17,7 +17,9 @@
   --black-light: #173d77;
   --pink: #da2f68;
   --orange: #f89e00;
-  --gradient: linear-gradient(98.37deg, #f89e00 0.99%, #da2f68 100%);
+  --color-primary: #7950f2;
+  --color-primary-light: #9775fa;
+  // --gradient: linear-gradient(98.37deg, #f89e00 0.99%, #da2f68 100%);
 }
 
 * {
