--- a/src/index.scss
+++ b/src/index.scss
@@ -33,6 +33,10 @@ body {
   color: white;
 }
 
+main {
+  padding-top: 3.75rem;
+}
+
 a {
   color: currentColor;
   text-decoration: none;
@@ -46,28 +50,74 @@ a {
   position: relative;
   overflow: hidden;
   background-color: #0a2955;
-  
+
   &::after {
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      transform: translateX(-100%);
-      background-image: linear-gradient(
-          90deg,
-          rgba(#193763, 0) 0,
-          rgba(#193763, 0.2) 20%,
-          rgba(#193763, 0.5) 60%,
-          rgba(#193763, 0)
-      );
-      animation: shimmer 2s infinite;
-      content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    transform: translateX(-100%);
+    background-image: linear-gradient(90deg,
+        rgba(#193763, 0) 0,
+        rgba(#193763, 0.2) 20%,
+        rgba(#193763, 0.5) 60%,
+        rgba(#193763, 0));
+    animation: shimmer 2s infinite;
+    content: "";
   }
 
   @keyframes shimmer {
-      100% {
-          transform: translateX(100%);
-      }
+    100% {
+      transform: translateX(100%);
+    }
+  }
+}
+
+.btn {
+  outline: 0;
+  border: 0;
+  border-radius: 1.875rem;
+  padding: 0.75rem 1.5rem;
+  font-size: inherit;
+  cursor: pointer;
+
+  &:disabled {
+    opacity: 0.5;
+  }
+
+  &--primary {
+    background: var(--color-primary);
+    color: white;
+  }
+}
+
+.form-group {
+  margin-bottom: 2rem;
+}
+
+label {
+  display: block;
+  margin-bottom: 0.875rem;
+}
+
+.form-control {
+  padding: 0.75rem 1rem;
+  width: 100%;
+  border-radius: 5px;
+  outline: 0;
+  border: none;
+  font-size: inherit;
+}
+
+.link {
+  color: var(--color-primary-light);
+}
+
+.alert {
+  & {
+    background-color: red;
+    padding: 0.75rem 1.25rem;
+    border-radius: 5px;
   }
 }
